--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div class="about-1">
             <button>about</button>
         </div>
+        <div class="one">
+
+        </div>
     </div>
 
     <div class="line"></div>
